# tyrga

./: .rustfmt.toml  .travis.yml  Cargo.toml  Makefile  README.md  build.rs
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust.yml
src/: deadcode.rs  exprtree.rs  jvmtypes.rs  lib.rs  main.rs  mangling.rs  stack.rs  tenyr.rs
test/: Allocate.java  Allocate.tas  Calling.java  Calling.tas  Compare.java  Compare.tas  Constant.java  Constant.tas  Deep.java  Deep.tas  Empty.java  Empty.tas  Except.java  Except.tas  Expr.java  Expr.tas  Fields.java  Fields.tas  GCD.java  GCD.tas  Infinite.java  Infinite.tas  Loops.java  Loops.tas  Makefile  Native.java  Native.tas  Native_support.tas  Nest.java  Nest.tas  Recurse.java  Recurse.tas  Sieve.java  Sieve.tas  Static.java  Static.tas  Switch.java  Switch.tas  Tiny.java  Tiny.tas  (+2 more)
test/interesting/module/name/: Packaged.java  Packaged.tas
tyrga-bin/: Cargo.toml
tyrga-bin/src/: main.rs
tyrga-lib/: Cargo.toml
tyrga-lib/java-lib/tyrga/: Builtin.java
tyrga-lib/src/: exprtree.rs  jvmtypes.rs  lib.rs  mangling.rs  stack.rs  stack2.rs  tenyr.rs
tyrga-lib/tenyr-lib/: Entry.tas  Long.tas  Object.tas
