[package]
name = "tyrga-cli"
version = "0.1.0"
rust-version = "1.58.0"
authors = ["Darren Kulp <darren@kulp.ch>"]
edition = "2021"
categories = ["command-line-utilities", "development-tools", "emulators"]
description = "tyrga translates JVM bytecode (.class files) into tenyr source code."
keywords = ["jvm", "tenyr", "compiler"]
license = "MIT"
build = "../build.rs"

[badges]
maintenance = { status = "experimental" }

[dependencies]
clap = "~2.33.0"
classfile-parser = "~0.3.4"
mangling = "0.1"
tyrga = { path = "../tyrga-lib" }

[dev-dependencies]
walkdir = "2"

[build-dependencies]
walkdir = "2"
