[package]
name = "tyrga"
version = "0.1.0"
rust-version = "1.58.0"
authors = ["Darren Kulp <darren@kulp.ch>"]
edition = "2021"
categories = ["development-tools", "emulators"]
description = "tyrga translates JVM bytecode (.class files) into tenyr source code."
keywords = ["jvm", "tenyr", "compiler"]
license = "MIT"
build = "../build.rs"

[badges]
maintenance = { status = "experimental" }

[dependencies]
classfile-parser = "~0.3.4"
mangling = "0.2"

[dev-dependencies]
quickcheck = "0.8"
walkdir = "2"

[build-dependencies]
walkdir = "2"
